docs: rename package to `chatgpt-cli-md`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "chatgpt-cli"
+name = "chatgpt-cli-md"
 version = "0.1.0"
 description = "A markdown-supported command-line interface tool that connects to ChatGPT using OpenAI's API key."
 readme = { file = "README.md", content-type = "text/markdown" }
@@ -24,7 +24,7 @@ scripts = { chatgpt-cli = "chatgpt_cli.chat:main" }
 dependencies = ["openai >= 0.27.0", "pyyaml >= 6.0", "rich >= 13.3.1"]
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project.urls]
