--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ frozenlist==1.3.3
 idna==3.4
 markdown-it-py==2.2.0
 mdformat==0.7.16
+mdformat-gfm==0.3.5
+mdformat-frontmatter==2.0.1
+mdformat-footnote==0.1.1
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
@@ -17,6 +20,7 @@ openai==0.27.2
 packaging==23.0
 pathspec==0.11.1
 platformdirs==3.2.0
+pyreadline3==3.4.1
 Pygments==2.14.0
 PyYAML==6.0
 requests==2.28.2
