--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
 black==23.1.0
+build==0.10.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
@@ -20,10 +21,10 @@ openai==0.27.2
 packaging==23.0
 pathspec==0.11.1
 platformdirs==3.2.0
-pyreadline3==3.4.1
+pyreadline3==3.4.1; platform_system=='Windows'
 Pygments==2.14.0
 PyYAML==6.0
-requests==2.28.2
+requests==2.31.0
 rich==13.3.2
 tomli==2.0.1
 tqdm==4.65.0
